--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@nuxt/icon": "^1.5.5",
+    "@pinia/nuxt": "^0.5.5",
     "nuxt": "^3.13.0",
     "vue": "latest",
     "vue-router": "latest"
