--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@nuxtjs/tailwindcss": "^6.12.1",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
-    "sass-embedded": "^1.79.4"
+    "sass-embedded": "^1.79.4",
+    "typescript": "^5.6.3"
   }
 }
